# Copyright (C) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//device/soc/rockchip/rk3568/hardware/omx_il/rk_omx.gni")
import("//drivers/adapter/uhdf2/uhdf.gni")

shared_library("omxvpu_enc") {
  sources = [
    "Rkvpu_OMX_Venc.c",
    "Rkvpu_OMX_VencControl.c",
    "library_register.c",
  ]
  include_dirs = [
    ".",
    "//device/soc/rockchip/rk3568/hardware/omx_il/osal",
    "//device/soc/rockchip/rk3568/hardware/omx_il/include/khronos",
    "//device/soc/rockchip/rk3568/hardware/omx_il/include/rockchip",
    "//device/soc/rockchip/rk3568/hardware/omx_il/include/librkvpu",
    "//device/soc/rockchip/rk3568/hardware/omx_il/component/common",
    "//device/soc/rockchip/rk3568/hardware/omx_il/core",
    "//vendor/hihope/rk3568/mpp/inc",
    "//device/hihope/rk3568/hardware/rga/include",
    "//device/soc/rockchip/rk3568/hardware/omx_il/include/librkvpu",
    "//drivers/framework/include/utils",
    "//drivers/adapter/uhdf2/osal/include",
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits",
    "//utils/native/base/include",
    "//device/soc/rockchip/rk3568/hardware/rga/include",
    "//third_party/libdrm/include/drm",
    "//third_party/openmax/api/1.1.2",
  ]

  cflags = [
    "-Wno-unused-variable",
    "-Wno-implicit-function-declaration",
    "-Wno-format",
    "-Wno-switch",
    "-DAVS100=1",
  ]

  if (USE_DRM) {
    cflags += [
      "-DUSE_DRM",
      "-DHAVE_L1_SVP_MODE",
    ]
  }

  if (USE_AFBC) {
    cflags += [ "-DSUPPORT_AFBC" ]
  }

  if (USE_GPU) {
    cflags += [ "-DROCKCHIP_GPU_LIB_ENABLE" ]
  }

  if (USE_RGA) {
    cflags += [ "-DSUPPORT_RGA" ]
  }

  if (USE_HEVC_ENC) {
    cflags += [ "-DSUPPORT_HEVC_ENC" ]
  }

  if (USE_VP8_ENC) {
    cflags += [ "-DSUPPORT_VP8_ENC" ]
  }

  deps = [
    "//device/soc/rockchip/rk3568/hardware/omx_il/component/common:RkOMX_Basecomponent",
    "//device/soc/rockchip/rk3568/hardware/omx_il/component/common:RkOMX_Resourcemanager",
    "//device/soc/rockchip/rk3568/hardware/omx_il/osal:RkOMX_OSAL",
    "//vendor/hihope/rk3568/mpp/mpp/legacy:rockchip_vpu",
  ]
}
